# deltalakex

./: .gitignore  README.md  mix.exs
lib/: comptime_utils.ex  deltalake_nif.ex  deltalakex.ex
native/deltalake/: Cargo.toml  README.md
native/deltalake/src/: lib.rs
native/deltalakex/: Cargo.toml  README.md
native/deltalakex/src/: error.rs  lib.rs
test/: deltalakex_test.exs
