[package]
name = "deltalakex"
version = "0.1.0"
authors = []
edition = "2021"

[lib]
name = "deltalakex"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
deltalake = { version = "0.17", default-features = true, features = [
    "json"
]}
rustler = "0.30.0"
tokio = { version = "1.36", default-features = false, features = [
  "rt",
]}
thiserror = "1"
anyhow = "1"

[features]
default = ["nif_version_2_15"]

# Feature necessary for Rustler Precompiled.
nif_version_2_15 = ["rustler/nif_version_2_15"]
